# chip-8_interpreter

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  platform.h  viewer.h
src/: chip8.cpp  initialize.cpp  main.cpp  opcodes.cpp  platform.cpp  refactor.cpp  viewer.cpp
